--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "axios": "^1.4.0",
     "next": "12.3.4",
     "phosphor-icons": "^1.4.2",
     "phosphor-react": "^1.4.1",
