--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
     "axios": "^1.4.0",
+    "firebase": "^10.1.0",
     "next": "12.3.4",
+    "nookies": "^2.5.2",
     "phosphor-icons": "^1.4.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.45.2",
+    "react-toastify": "^9.1.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
