--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@reduxjs/toolkit": "^1.1.0",
     "axios": "^1.4.0",
     "firebase": "^10.1.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
     "next": "12.3.4",
     "nookies": "^2.5.2",
     "phosphor-icons": "^1.4.2",
