docs: prepare doc

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 NEXT_PUBLIC_API_GATEWAY_URL=http://localhost:3000/
+
+NEXT_PUBLIC_API_APIKEY="AIzaSyDgw2--UFRZhF8nVghpgsJ6w34K4bttLzY"
+NEXT_PUBLIC_API_AUTHDOMAIN="delliv-a2ee9.firebaseapp.com",
+NEXT_PUBLIC_API_PROJECT_ID="delliv-a2ee9",
+NEXT_PUBLIC_API_STORAGEBUCKET="delliv-a2ee9.appspot.com",
+NEXT_PUBLIC_API_MESSAGINGSENDER_ID="342940956273",
+NEXT_PUBLIC_API_APP_ID="1:342940956273:web:653f83a77b8a73185b4dd0",
+NEXT_PUBLIC_API_MEASUREMENTID="G-S8GGZV20YS"
