--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@reduxjs/toolkit": "^1.1.0",
     "axios": "^1.4.0",
     "firebase": "^10.1.0",
-    "react-redux": "^7.1.3",
-    "redux": "^4.0.4",
     "next": "12.3.4",
     "nookies": "^2.5.2",
     "phosphor-icons": "^1.4.2",
@@ -25,7 +25,9 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.45.2",
+    "react-redux": "^7.1.3",
     "react-toastify": "^9.1.3",
+    "redux": "^4.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
